Code cleaup and coverage for integration tests